Выводим дополнительную информацию (общее кол-во сборок мусора, общая продолжительность) по young и old поколениям